fix: adapted scrollbar, updated to use mustache script, fixed broken links

--- a/packages/documentation-redesign/src/scss/custom.scss
+++ b/packages/documentation-redesign/src/scss/custom.scss
@@ -90,3 +90,18 @@ ix-tooltip {
 .all-unset {
   all: unset;
 }
+
+@media (pointer: fine) {
+  .thin-scrollbar {
+    scrollbar-width: thin;
+  }
+
+  @supports not (-moz-appearance: none) {
+    .thin-scrollbar {
+      scrollbar-width: auto;
+    }
+  }
+}
+
+
+
